# XScript2PackageManager

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ThirdPartySoftwaresList.md  main.cpp
.github/workflows/: action.yml
Network/: Mirror.cpp  Mirror.hpp  httplib.hpp
Utils/: CannotCreateFile.cpp  CannotCreateFile.hpp  PackageAlreadyExist.cpp  PackageAlreadyExist.hpp  PackageNotExist.cpp  PackageNotExist.hpp  PackageVersionNotExist.cpp  PackageVersionNotExist.hpp  Utils.cpp  Utils.hpp  XpmException.cpp  XpmException.hpp
Utils/whereami/: whereami.cpp  whereami.h
